chore friendsofphp/php-cs-fixer

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,9 +3,11 @@
 /public/storage
 /storage/*.key
 /vendor
+/vendor-bin
 .env
 .env.backup
 .phpunit.result.cache
+.php-cs-fixer.cache
 docker-compose.override.yml
 Homestead.json
 Homestead.yaml
